--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   http: ^0.13.5
   connectivity_plus: ^2.3.6
   shared_preferences: ^2.0.15
+  data_connection_checker: ^0.3.4
 
 dev_dependencies:
   flutter_test:
